--- a/pre/scss/pages/_game.scss
+++ b/pre/scss/pages/_game.scss
@@ -324,8 +324,6 @@
                 max-width: 33.33%;
 
                 >a {
-                    padding: size(12);
-
                     &:hover {
                         background-color: transparent;
                     }
@@ -348,7 +346,8 @@
 
                     .desc {
                         order: 4;
-                        max-height: size(120);
+                        max-height: size(160);
+                        min-height: size(128);
                     }
 
                     .awards {
