--- a/pre/scss/layout/_main.scss
+++ b/pre/scss/layout/_main.scss
@@ -45,6 +45,12 @@ main {
         .container {
             max-width: size(1440);
             margin: 0 auto;
+
+            .h1 {
+                &+p {
+                    margin-top: size(8);
+                }
+            }
         }
     }
 
@@ -222,7 +228,7 @@ main {
 
     // pad ~ 1024
     @include max-to(pad) {
-        margin: size(60) auto;
+        margin: 0 auto;
         padding: 0 size(16);
 
         .mask {
@@ -235,7 +241,7 @@ main {
             margin-top: size(32);
             position: initial;
             width: 100%;
-            height: size(300);
+            height: size(200);
             padding: 0 0 size(90);
 
             div {
@@ -314,15 +320,8 @@ main {
         min-width: size(300);
         flex-grow: 0;
 
-        p {
-            &.title-xl {
-                margin-bottom: size(8);
-            }
-
-            &.body-1 {
-                margin-top: 0;
-                margin-bottom: size(40);
-            }
+        &.body-1 {
+            margin-bottom: size(40);
         }
     }
 
@@ -447,6 +446,7 @@ main {
             flex-wrap: wrap;
             height: auto;
             gap: size(60);
+            padding: 0;
         }
 
         .desc,
